--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = "ignorant-fool's blog"
 theme = "hello-friend-ng"
 
 
-enableEmoji = false
+enableEmoji = true
 disable404 = false
 
 [params]
